wikidata2fields work

--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -19,10 +19,11 @@
   "app-guide-topic": "عنوان",
   "app-guide-artwork": "لوحة",
   "app-guide-organism": "الكائن الحي",
-  "app-guide-music": "organism",
+  "app-guide-music": "موسيقى",
   "app-guide-science": "علم",
   "app-topics-found": "تم العثور على المواضيع",
   "app-section-main": "الأساسية",
+  "app-section-info": "info",
   "app-section-library": "مكتبة",
   "app-section-web": "الويب",
   "app-section-news": "الإخبارية",
@@ -155,6 +156,56 @@
   "app-guide-fungus": "فطر",
   "app-guide-bacterium": "بكتيريا",
   "app-guide-virus": "فايروس",
+
+  "app-guide-featured-article": "مقال متميز",
+  "app-menu-cover-topic": "موضوع الغلاف",
+  "app-menu-culture": "حضاره",
+  "app-menu-nature": "طبيعة سجية",
+  "app-menu-license": "رخصة",
+  "app-guide-help": "مساعدة",
+  "app-guide-sea": "لحر",
+  "app-guide-continent": "القارة",
+  "app-guide-bioregion": "منطقة بيولوجية",
+  "app-guide-mountain-range": "سلسلة جبال",
+  "app-guide-disease": "مرض",
+  "app-guide-organism": "الكائن الحي",
+  "app-guide-protein": "بروتين",
+  "app-guide-atom": "ذرة",
+  "app-guide-protist": "المحتج",
+
+  "app-guide-country-map": "خريطة البلاد",
+  "app-guide-country": "بلد",
+  "app-guide-capitol": "الكابيتول",
+  "app-guide-form-of-governement": "شكل الحكومة",
+  "app-guide-religion": "دين",
+  "app-guide-period": "فترة",
+  "app-guide-history-aspect": "جانب التاريخ",
+  "app-guide-revolution": "ثورة",
+  "app-guide-war": "حرب",
+  "app-guide-battle": "معركة",
+  "app-guide-documentary": "وثائقي",
+  "app-guide-documentary-title": "عنوان الفيلم الوثائقي",
+  "app-guide-film-title": "عنوان الفيلم",
+  "app-guide-art-movement": "حركة الفن",
+  "app-guide-composer": "ملحن",
+  "app-guide-painter": "دهان",
+  "app-guide-poet": "شاعر",
+  "app-guide-philosopher": "فيلسوف",
+  "app-guide-architect": "مهندس معماري",
+  "app-guide-inventor": "مخترع",
+  "app-guide-software": "البرمجيات",
+  "app-guide-mathematics": "الرياضيات",
+  "app-guide-tourist-attraction": "جذب سياحى",
+  "app-guide-dish": "طبق",
+
+  "app-guide-cell-type": "نوع من الخلايا",
+  "app-guide-archae": "العتيقة",
+  "app-menu-persona": "شخصية",
+
+  "app-guide-featured-portal": "أفضل بوابة",
+
+  "app-guide-musical-instrument": "أداة",
+  "app-guide-radio": "مذياع",
 
 	"app-foo": "foo bar baz"
 } 
