--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -21,6 +21,7 @@
   "app-guide-music": "musik",
   "app-topics-found": "themen gefunden",
   "app-section-main": "hauptsächlich",
+  "app-section-info": "info",
   "app-section-library": "bücherei",
   "app-section-web":  "netz",
   "app-section-news": "nachrichten",
@@ -161,6 +162,55 @@
   "app-guide-fungus": "pilz",
   "app-guide-bacterium": "bakterium",
   "app-guide-virus": "virus",
+
+  "app-guide-featured-article": "prominenter artikel",
+  "app-menu-cover-topic": "titelartikel",
+  "app-menu-culture": "kultur",
+  "app-menu-nature": "natur",
+  "app-menu-license": "lizenz",
+  "app-guide-help": "hilfe",
+  "app-guide-sea": "meer",
+  "app-guide-continent": "kontinent",
+  "app-guide-bioregion": "bioregion",
+  "app-guide-mountain-range": "gebirge",
+  "app-guide-disease": "erkrankung",
+  "app-guide-organism": "organismus",
+  "app-guide-protein": "protein",
+  "app-guide-atom": "atom",
+  "app-guide-protist": "protist",
+
+  "app-guide-country-map": "landkarte",
+  "app-guide-country": "land",
+  "app-guide-capitol": "kapitol",
+  "app-guide-form-of-governement": "regierungsform",
+  "app-guide-religion": "religion",
+  "app-guide-period": "zeitraum",
+  "app-guide-history-aspect": "geschichtlicher aspekt",
+  "app-guide-revolution": "revolution",
+  "app-guide-war": "krieg",
+  "app-guide-battle": "schlacht",
+  "app-guide-documentary": "dokumentarfilm",
+  "app-guide-documentary-title": "dokumentarischer titel",
+  "app-guide-film-title": "filmtitel",
+  "app-guide-art-movement": "kunstbewegung",
+  "app-guide-composer": "komponist",
+  "app-guide-painter": "maler",
+  "app-guide-poet": "dichter",
+  "app-guide-philosopher": "philosoph",
+  "app-guide-architect": "architekt",
+  "app-guide-inventor": "erfinder",
+  "app-guide-software": "software",
+  "app-guide-mathematics": "mathematik",
+  "app-guide-tourist-attraction": "touristenattraktion",
+  "app-guide-dish": "gericht",
+
+  "app-guide-cell-type": "cell type",
+  "app-guide-archae": "archae",
+  "app-menu-persona": "persona",
+  "app-guide-featured-portal": "featured portal",
+
+  "app-guide-musical-instrument": "instrument",
+  "app-guide-radio": "radio",
 
 	"app-foo": "foo bar baz"
 }
