--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -22,6 +22,7 @@
   "app-guide-science": "música aleatoria",
   "app-topics-found": "temas encontrados",
   "app-section-main": "principal",
+  "app-section-info": "info",
   "app-section-library": "biblioteca",
   "app-section-web":  "web",
   "app-section-news": "noticias",
@@ -150,10 +151,59 @@
   "app-guide-insect": "insecto",
   "app-guide-spider": "araña",
   "app-guide-plant": "planta",
-  "app-guide-algae": "algaa",
+  "app-guide-algae": "algas",
   "app-guide-fungus": "hongo",
   "app-guide-bacterium": "bacteria",
   "app-guide-virus": "virus",
+
+  "app-guide-featured-article": "mejor articulo",
+  "app-menu-cover-topic": "tema de portada",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "naturaleza",
+  "app-menu-license": "licencia",
+  "app-guide-help": "ayuda",
+  "app-guide-sea": "mar",
+  "app-guide-continent": "continente",
+  "app-guide-bioregion": "bioregión",
+  "app-guide-mountain-range": "cordillera",
+  "app-guide-disease": "enfermedad",
+  "app-guide-organism": "organismo",
+  "app-guide-protein": "proteína",
+  "app-guide-atom": "átomo",
+  "app-guide-protist": "protista",
+
+  "app-guide-country-map": "mapa do país",
+  "app-guide-country": "país",
+  "app-guide-capitol": "capitólio",
+  "app-guide-form-of-governement": "forma de governo",
+  "app-guide-religion": "religião",
+  "app-guide-period": "período",
+  "app-guide-history-aspect": "aspecto histórico",
+  "app-guide-revolution": "revolução",
+  "app-guide-war": "guerra",
+  "app-guide-battle": "batalha",
+  "app-guide-documentary": "documentário",
+  "app-guide-documentary-title": "título do documentário",
+  "app-guide-film-title": "título do filme",
+  "app-guide-art-movement": "movimento artístico",
+  "app-guide-composer": "compositor",
+  "app-guide-painter": "pintor",
+  "app-guide-poet": "poeta",
+  "app-guide-philosopher": "filósofo",
+  "app-guide-architect": "arquiteto",
+  "app-guide-inventor": "inventor",
+  "app-guide-software": "programas",
+  "app-guide-mathematics": "matemática",
+  "app-guide-tourist-attraction": "atração turística",
+  "app-guide-dish": "prato",
+
+  "app-guide-cell-type": "tipo de célula",
+  "app-guide-archae": "arqueia",
+  "app-menu-persona": "persona",
+  "app-guide-featured-portal": "melhor portal",
+
+  "app-guide-musical-instrument": "instrumento",
+  "app-guide-radio": "rádio",
 
 	"app-foo": "foo bar baz"
 }
