--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -22,6 +22,7 @@
   "app-guide-science": "science",
   "app-topics-found": "sujets trouvés",
   "app-section-main": "principal",
+  "app-section-info": "info",
   "app-section-library": "bibliothèque",
   "app-section-web":  "toile",
   "app-section-news": "nouvelles",
@@ -154,6 +155,55 @@
   "app-guide-fungus": "champignon",
   "app-guide-bacterium": "bactérie",
   "app-guide-virus": "virus",
+
+  "app-guide-featured-article": "meilleur article",
+  "app-menu-cover-topic": "sujet de couverture",
+  "app-menu-culture": "culture",
+  "app-menu-nature": "la nature",
+  "app-menu-license": "licence",
+  "app-guide-help": "aider",
+  "app-guide-sea": "mer",
+  "app-guide-continent": "continente",
+  "app-guide-bioregion": "biorégion",
+  "app-guide-mountain-range": "chaîne de montagnes",
+  "app-guide-disease": "maladie",
+  "app-guide-organism": "organisme",
+  "app-guide-protein": "protéine",
+  "app-guide-atom": "atome",
+  "app-guide-protist": "protiste",
+
+  "app-guide-country-map": "",
+  "app-guide-country": "pays",
+  "app-guide-capitol": "capitole",
+  "app-guide-form-of-governement": "forme de gouvernement",
+  "app-guide-religion": "religion",
+  "app-guide-period": "période",
+  "app-guide-history-aspect": "aspect historique",
+  "app-guide-revolution": "révolution",
+  "app-guide-war": "guerre",
+  "app-guide-battle": "bataille",
+  "app-guide-documentary": "documentaire",
+  "app-guide-documentary-title": "titre documentaire",
+  "app-guide-film-title": "titre de film",
+  "app-guide-art-movement": "mouvement artistique",
+  "app-guide-composer": "compositeur",
+  "app-guide-painter": "paintor",
+  "app-guide-poet": "poète",
+  "app-guide-philosopher": "philosophe",
+  "app-guide-architect": "architecte",
+  "app-guide-inventor": "inventeur",
+  "app-guide-software": "logiciel",
+  "app-guide-mathematics": "mathématiques",
+  "app-guide-tourist-attraction": "attraction touristique",
+  "app-guide-dish": "assiette",
+
+  "app-guide-cell-type": "type de cellule",
+  "app-guide-archae": "archées",
+  "app-menu-persona": "personnage",
+  "app-guide-featured-portal": "meilleur portail",
+
+  "app-guide-musical-instrument": "instrument",
+  "app-guide-radio": "radio",
 
 	"app-foo": "foo bar baz"
 }
