--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -22,6 +22,7 @@
   "app-guide-science": "wetenschap",
   "app-topics-found": "onderwerpen gevonden",
   "app-section-main": "algemeen",
+  "app-section-info": "info",
   "app-section-library": "bibliotheek",
   "app-section-web":  "web",
   "app-section-news": "nieuws",
@@ -45,7 +46,7 @@
   "app-menu-voice": "stem",
   "app-menu-user-manual": "handleiding",
   "app-menu-keyboard-shortcuts": "toetsenbord sneltoetsen",
-  "app-menu-credits": "credit",
+  "app-menu-credits": "dank aan",
   "app-menu-about": "over",
 
   "app-menu-random-topic": "willekeurig onderwerp",
@@ -61,8 +62,8 @@
   "app-menu-version": "versie",
   "app-menu-made-by": "gemaakt door",
   "app-menu-all-rights-reserved": "alle rechten voorbehouden",
-  "app-menu-font-type": "lettertype-grootte",
-  "app-menu-font-size": "lettertype",
+  "app-menu-font-type": "lettertype",
+  "app-menu-font-size": "lettergrootte",
   "app-menu-darkmode": "donkere modus",
   "app-menu-link-preview": "linkvoorbeeld",
   "app-menu-color-filter": "kleurenfilter",
@@ -162,6 +163,55 @@
   "app-guide-fungus": "schimmel",
   "app-guide-bacterium": "bacterie",
   "app-guide-virus": "virus",
+
+  "app-guide-featured-article": "aanbevolen artikel",
+  "app-menu-cover-topic": "omslagonderwerp",
+  "app-menu-culture": "cultuur",
+  "app-menu-nature": "natuur",
+  "app-menu-license": "licentie",
+  "app-guide-help": "hulp",
+  "app-guide-sea": "zee",
+  "app-guide-continent": "continent",
+  "app-guide-bioregion": "bioregio",
+  "app-guide-mountain-range": "gebergte",
+  "app-guide-disease": "ziekte",
+  "app-guide-organism": "organisme",
+  "app-guide-protein": "eiwit",
+  "app-guide-atom": "atoom",
+  "app-guide-protist": "protist",
+
+  "app-guide-country-map": "landkaart",
+  "app-guide-country": "land",
+  "app-guide-capitol": "hoofdstad",
+  "app-guide-form-of-governement": "regeringsvorm",
+  "app-guide-religion": "religie",
+  "app-guide-period": "periode",
+  "app-guide-history-aspect": "historisch aspect",
+  "app-guide-revolution": "revolutie",
+  "app-guide-war": "oorlog",
+  "app-guide-battle": "slag",
+  "app-guide-documentary": "documentaire",
+  "app-guide-documentary-title": "documentaire titel",
+  "app-guide-film-title": "film titel",
+  "app-guide-art-movement": "kunst beweging",
+  "app-guide-composer": "componist",
+  "app-guide-painter": "schilder",
+  "app-guide-poet": "dichter",
+  "app-guide-philosopher": "filosoof",
+  "app-guide-architect": "architect",
+  "app-guide-inventor": "uitvinder",
+  "app-guide-software": "software",
+  "app-guide-mathematics": "wiskunde",
+  "app-guide-tourist-attraction": "touristische attractie",
+  "app-guide-dish": "gerecht",
+
+  "app-guide-cell-type": "cell type",
+  "app-guide-archae": "archae",
+  "app-menu-persona": "persona",
+  "app-guide-featured-portal": "aanbevolen portaal",
+
+  "app-guide-musical-instrument": "instrument",
+  "app-guide-radio": "radio",
 
   "app-foo": "foo bar baz"
 }
