--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -22,6 +22,7 @@
   "app-guide-science": "ciência",
   "app-topics-found": "tópicos encontrados",
   "app-section-main": "a principal",
+  "app-section-info": "info",
   "app-section-library": "biblioteca",
   "app-section-web":  "rede",
   "app-section-news": "notícia",
@@ -154,6 +155,55 @@
   "app-guide-fungus": "fungo",
   "app-guide-bacterium": "bactéria",
   "app-guide-virus": "vírus",
+
+  "app-guide-featured-article": "melhor artigo",
+  "app-menu-cover-topic": "tema da capa",
+  "app-menu-culture": "cultura",
+  "app-menu-nature": "natureza",
+  "app-menu-license": "licença",
+  "app-guide-help": "ajuda",
+  "app-guide-sea": "mar",
+  "app-guide-continent": "continente",
+  "app-guide-bioregion": "biorregião",
+  "app-guide-mountain-range": "cadeia de montanhas",
+  "app-guide-disease": "doença",
+  "app-guide-organism": "organismo",
+  "app-guide-protein": "proteína",
+  "app-guide-atom": "átomo",
+  "app-guide-protist": "protista",
+
+  "app-guide-country-map": "mapa do país",
+  "app-guide-country": "país",
+  "app-guide-capitol": "capitólio",
+  "app-guide-form-of-governement": "forma de governo",
+  "app-guide-religion": "religião",
+  "app-guide-period": "período",
+  "app-guide-history-aspect": "aspecto histórico",
+  "app-guide-revolution": "revolução",
+  "app-guide-war": "guerra",
+  "app-guide-battle": "batalha",
+  "app-guide-documentary": "documentário",
+  "app-guide-documentary-title": "título do documentário",
+  "app-guide-film-title": "título do filme",
+  "app-guide-art-movement": "movimento artístico",
+  "app-guide-composer": "compositor",
+  "app-guide-painter": "pintor",
+  "app-guide-poet": "poeta",
+  "app-guide-philosopher": "filósofo",
+  "app-guide-architect": "arquiteto",
+  "app-guide-inventor": "inventor",
+  "app-guide-software": "programas",
+  "app-guide-mathematics": "matemática",
+  "app-guide-tourist-attraction": "atração turística",
+  "app-guide-dish": "prato",
+
+  "app-guide-cell-type": "tipo de célula",
+  "app-guide-archae": "arqueia",
+  "app-menu-persona": "persona",
+  "app-guide-featured-portal": "melhor portal",
+
+  "app-guide-musical-instrument": "instrumento",
+  "app-guide-radio": "rádio",
 
 	"app-foo": "foo bar baz"
 }
