--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -22,6 +22,7 @@
   "app-guide-science": "vetenskap",
   "app-topics-found": "ämnen som hittades",
   "app-section-main": "huvud",
+  "app-section-info": "info",
   "app-section-library": "bibliotek",
   "app-section-web":  "webb",
   "app-section-news": "nyheter",
@@ -162,6 +163,55 @@
   "app-guide-fungus": "fungus",
   "app-guide-bacterium": "bacterium",
   "app-guide-virus": "virus",
+
+  "app-guide-featured-article": "featured article",
+  "app-menu-cover-topic": "cover topic",
+  "app-menu-culture": "culture",
+  "app-menu-nature": "nature",
+  "app-menu-license": "license",
+  "app-guide-help": "help",
+  "app-guide-sea": "sea",
+  "app-guide-continent": "continent",
+  "app-guide-bioregion": "bioregion",
+  "app-guide-mountain-range": "mountain range",
+  "app-guide-disease": "disease",
+  "app-guide-organism": "organism",
+  "app-guide-protein": "protein",
+  "app-guide-atom": "atom",
+  "app-guide-protist": "protist",
+
+  "app-guide-country-map": "country map",
+  "app-guide-country": "country",
+  "app-guide-capitol": "capitol",
+  "app-guide-form-of-governement": "form of gov.",
+  "app-guide-religion": "religion",
+  "app-guide-period": "period",
+  "app-guide-history-aspect": "history aspect",
+  "app-guide-revolution": "revolution",
+  "app-guide-war": "war",
+  "app-guide-battle": "battle",
+  "app-guide-documentary": "documentary",
+  "app-guide-documentary-title": "documentary title",
+  "app-guide-film-title": "film title",
+  "app-guide-art-movement": "art movement",
+  "app-guide-composer": "composer",
+  "app-guide-painter": "painter",
+  "app-guide-poet": "poet",
+  "app-guide-philosopher": "philosopher",
+  "app-guide-architect": "architect",
+  "app-guide-inventor": "inventor",
+  "app-guide-software": "software",
+  "app-guide-mathematics": "mathematics",
+  "app-guide-tourist-attraction": "tourist attraction",
+  "app-guide-dish": "dish",
+
+  "app-guide-cell-type": "cell type",
+  "app-guide-archae": "archae",
+  "app-menu-persona": "persona",
+  "app-guide-featured-portal": "featured portal",
+
+  "app-guide-musical-instrument": "instrument",
+  "app-guide-radio": "radio",
 
 	"app-foo": "foo bar baz"
 }
