--- a/app/explore2/assets/i18n/conzept-ar.json
+++ b/app/explore2/assets/i18n/conzept-ar.json
@@ -119,6 +119,7 @@
   "app-section-society": "المجتمع",
   "app-section-society-sports": "رياضات",
   "app-section-society-food": "غذاء",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "دين",
   "app-section-library-poetry": "الشعر",
   "app-section-library-identity": "هوية",
