--- a/app/explore2/assets/i18n/conzept-ca.json
+++ b/app/explore2/assets/i18n/conzept-ca.json
@@ -119,6 +119,7 @@
   "app-section-society": "societat",
   "app-section-society-sports": "esports",
   "app-section-society-food": "menjar",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religió",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identitat",
