--- a/app/explore2/assets/i18n/conzept-ceb.json
+++ b/app/explore2/assets/i18n/conzept-ceb.json
@@ -119,6 +119,7 @@
   "app-section-society": "katilingban",
   "app-section-society-sports": "sports",
   "app-section-society-food": "pagkaon",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "relihiyon",
   "app-section-library-poetry": "balak",
   "app-section-library-identity": "pagkatawo",
