--- a/app/explore2/assets/i18n/conzept-cs.json
+++ b/app/explore2/assets/i18n/conzept-cs.json
@@ -120,6 +120,7 @@
   "app-section-society": "společnost",
   "app-section-society-sports": "sportovní",
   "app-section-society-food": "jídlo",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "náboženství",
   "app-section-library-poetry": "poezie",
   "app-section-library-identity": "identita",
