--- a/app/explore2/assets/i18n/conzept-da.json
+++ b/app/explore2/assets/i18n/conzept-da.json
@@ -119,6 +119,7 @@
   "app-section-society": "samfund",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mad",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
