--- a/app/explore2/assets/i18n/conzept-de.json
+++ b/app/explore2/assets/i18n/conzept-de.json
@@ -119,6 +119,7 @@
   "app-section-society": "Gesellschaft",
   "app-section-society-sports": "Sport",
   "app-section-society-food": "Lebensmittel",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "Poesie",
   "app-section-library-identity": "Identität",
