--- a/app/explore2/assets/i18n/conzept-en.json
+++ b/app/explore2/assets/i18n/conzept-en.json
@@ -131,6 +131,7 @@
   "app-section-society-sports": "sports",
   "app-section-society-food": "food",
 
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poetry",
   "app-section-library-identity": "identity",
