--- a/app/explore2/assets/i18n/conzept-es.json
+++ b/app/explore2/assets/i18n/conzept-es.json
@@ -119,6 +119,7 @@
   "app-section-society": "sociedad",
   "app-section-society-sports": "Deportes",
   "app-section-society-food": "alimento",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religión",
   "app-section-library-poetry": "poesía",
   "app-section-library-identity": "identidad",
