--- a/app/explore2/assets/i18n/conzept-fi.json
+++ b/app/explore2/assets/i18n/conzept-fi.json
@@ -119,6 +119,7 @@
   "app-section-society": "yhteiskuntaan",
   "app-section-society-sports": "Urheilu",
   "app-section-society-food": "ruokaa",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "uskonto",
   "app-section-library-poetry": "runous",
   "app-section-library-identity": "identiteetti",
