--- a/app/explore2/assets/i18n/conzept-fr.json
+++ b/app/explore2/assets/i18n/conzept-fr.json
@@ -119,6 +119,7 @@
   "app-section-society": "société",
   "app-section-society-sports": "des sports",
   "app-section-society-food": "aliments",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "la religion",
   "app-section-library-poetry": "poésie",
   "app-section-library-identity": "identité",
