--- a/app/explore2/assets/i18n/conzept-ha.json
+++ b/app/explore2/assets/i18n/conzept-ha.json
@@ -119,6 +119,7 @@
   "app-section-society": "al'umma",
   "app-section-society-sports": "wasanni",
   "app-section-society-food": "abinci",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "addini",
   "app-section-library-poetry": "waka",
   "app-section-library-identity": "ainihi",
