--- a/app/explore2/assets/i18n/conzept-hi.json
+++ b/app/explore2/assets/i18n/conzept-hi.json
@@ -119,6 +119,7 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेल",
   "app-section-society-food": "भोजन",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "शायरी",
   "app-section-library-identity": "पहचान",
