--- a/app/explore2/assets/i18n/conzept-hr.json
+++ b/app/explore2/assets/i18n/conzept-hr.json
@@ -119,6 +119,7 @@
   "app-section-society": "društvo",
   "app-section-society-sports": "sportski",
   "app-section-society-food": "hrana",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religija",
   "app-section-library-poetry": "poezija",
   "app-section-library-identity": "identitet",
