--- a/app/explore2/assets/i18n/conzept-id.json
+++ b/app/explore2/assets/i18n/conzept-id.json
@@ -119,6 +119,7 @@
   "app-section-society": "masyarakat",
   "app-section-society-sports": "olahraga",
   "app-section-society-food": "makanan",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "agama",
   "app-section-library-poetry": "puisi",
   "app-section-library-identity": "identitas",
