--- a/app/explore2/assets/i18n/conzept-it.json
+++ b/app/explore2/assets/i18n/conzept-it.json
@@ -119,6 +119,7 @@
   "app-section-society": "società",
   "app-section-society-sports": "gli sport",
   "app-section-society-food": "cibo",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religione",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identità",
