--- a/app/explore2/assets/i18n/conzept-ja.json
+++ b/app/explore2/assets/i18n/conzept-ja.json
@@ -119,6 +119,7 @@
   "app-section-society": "社会",
   "app-section-society-sports": "スポーツ",
   "app-section-society-food": "食物",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "宗教",
   "app-section-library-poetry": "詩",
   "app-section-library-identity": "身元",
