--- a/app/explore2/assets/i18n/conzept-mr.json
+++ b/app/explore2/assets/i18n/conzept-mr.json
@@ -119,6 +119,7 @@
   "app-section-society": "समाज",
   "app-section-society-sports": "खेळ",
   "app-section-society-food": "अन्न",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "धर्म",
   "app-section-library-poetry": "कविता",
   "app-section-library-identity": "ओळख",
