--- a/app/explore2/assets/i18n/conzept-nl.json
+++ b/app/explore2/assets/i18n/conzept-nl.json
@@ -119,6 +119,7 @@
   "app-section-society": "samenleving",
   "app-section-society-sports": "sport-",
   "app-section-society-food": "voedsel",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "geloof",
   "app-section-library-poetry": "poëzie",
   "app-section-library-identity": "identiteit",
