--- a/app/explore2/assets/i18n/conzept-pt.json
+++ b/app/explore2/assets/i18n/conzept-pt.json
@@ -119,6 +119,7 @@
   "app-section-society": "sociedade",
   "app-section-society-sports": "Esportes",
   "app-section-society-food": "Comida",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religião",
   "app-section-library-poetry": "poesia",
   "app-section-library-identity": "identidade",
