--- a/app/explore2/assets/i18n/conzept-ru.json
+++ b/app/explore2/assets/i18n/conzept-ru.json
@@ -119,6 +119,7 @@
   "app-section-society": "общество",
   "app-section-society-sports": "спортивный",
   "app-section-society-food": "еда",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "религия",
   "app-section-library-poetry": "поэзия",
   "app-section-library-identity": "личность",
