--- a/app/explore2/assets/i18n/conzept-sr.json
+++ b/app/explore2/assets/i18n/conzept-sr.json
@@ -119,6 +119,7 @@
   "app-section-society": "друштво",
   "app-section-society-sports": "спортске",
   "app-section-society-food": "храна",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "религија",
   "app-section-library-poetry": "поезија",
   "app-section-library-identity": "идентитет",
