--- a/app/explore2/assets/i18n/conzept-sv.json
+++ b/app/explore2/assets/i18n/conzept-sv.json
@@ -119,6 +119,7 @@
   "app-section-society": "samhälle",
   "app-section-society-sports": "sporter",
   "app-section-society-food": "mat",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
