--- a/app/explore2/assets/i18n/conzept-sw.json
+++ b/app/explore2/assets/i18n/conzept-sw.json
@@ -119,6 +119,7 @@
   "app-section-society": "jamii",
   "app-section-society-sports": "michezo",
   "app-section-society-food": "chakula",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "dini",
   "app-section-library-poetry": "ushairi",
   "app-section-library-identity": "utambulisho",
