--- a/app/explore2/assets/i18n/conzept-te.json
+++ b/app/explore2/assets/i18n/conzept-te.json
@@ -119,6 +119,7 @@
   "app-section-society": "సమాజం",
   "app-section-society-sports": "క్రీడలు",
   "app-section-society-food": "ఆహారం",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "మతం",
   "app-section-library-poetry": "కవిత్వం",
   "app-section-library-identity": "గుర్తింపు",
