--- a/app/explore2/assets/i18n/conzept-tr.json
+++ b/app/explore2/assets/i18n/conzept-tr.json
@@ -119,6 +119,7 @@
   "app-section-society": "toplum",
   "app-section-society-sports": "Spor Dalları",
   "app-section-society-food": "Gıda",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "din",
   "app-section-library-poetry": "şiir",
   "app-section-library-identity": "Kimlik",
