--- a/app/explore2/assets/i18n/conzept-uk.json
+++ b/app/explore2/assets/i18n/conzept-uk.json
@@ -119,6 +119,7 @@
   "app-section-society": "суспільства",
   "app-section-society-sports": "спорт",
   "app-section-society-food": "харчування",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "релігія",
   "app-section-library-poetry": "поезії",
   "app-section-library-identity": "ідентичність",
