--- a/app/explore2/assets/i18n/conzept-ur.json
+++ b/app/explore2/assets/i18n/conzept-ur.json
@@ -119,6 +119,7 @@
   "app-section-society": "معاشرہ",
   "app-section-society-sports": "کھیل",
   "app-section-society-food": "کھانا",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "مذہب",
   "app-section-library-poetry": "شاعری",
   "app-section-library-identity": "شناخت",
