--- a/app/explore2/assets/i18n/conzept-vi.json
+++ b/app/explore2/assets/i18n/conzept-vi.json
@@ -119,6 +119,7 @@
   "app-section-society": "xã hội",
   "app-section-society-sports": "các môn thể thao",
   "app-section-society-food": "món ăn",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "tôn giáo",
   "app-section-library-poetry": "thơ",
   "app-section-library-identity": "xác thực",
