--- a/app/explore2/assets/i18n/conzept-bn.json
+++ b/app/explore2/assets/i18n/conzept-bn.json
@@ -119,6 +119,7 @@
   "app-section-society": "সমাজ",
   "app-section-society-sports": "খেলাধুলা",
   "app-section-society-food": "খাদ্য",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "ধর্ম",
   "app-section-library-poetry": "কবিতা",
   "app-section-library-identity": "পরিচয়",
