--- a/app/explore2/assets/i18n/conzept-fa.json
+++ b/app/explore2/assets/i18n/conzept-fa.json
@@ -119,6 +119,7 @@
   "app-section-society": "جامعه",
   "app-section-society-sports": "ورزش ها",
   "app-section-society-food": "غذا",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "دین",
   "app-section-library-poetry": "شعر",
   "app-section-library-identity": "هویت",
