--- a/app/explore2/assets/i18n/conzept-no.json
+++ b/app/explore2/assets/i18n/conzept-no.json
@@ -119,6 +119,7 @@
   "app-section-society": "samfunn",
   "app-section-society-sports": "sport",
   "app-section-society-food": "mat",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "Religion",
   "app-section-library-poetry": "poesi",
   "app-section-library-identity": "identitet",
