--- a/app/explore2/assets/i18n/conzept-ta.json
+++ b/app/explore2/assets/i18n/conzept-ta.json
@@ -119,6 +119,7 @@
   "app-section-society": "சமூகம்",
   "app-section-society-sports": "விளையாட்டு",
   "app-section-society-food": "உணவு",
+  "app-section-library-philosophy": "philosophy",
   "app-section-library-religion": "மதம்",
   "app-section-library-poetry": "கவிதை",
   "app-section-library-identity": "அடையாளம்",
